Thu Sep 23 19:27:57 2010  wanabe  <s.wanabe@gmail.com>

	* thread_win32.c (w32_wait_events, w32_close_handle): suppress warnings.
	  see [ruby-core:31932].

Thu Sep 23 18:54:39 2010  wanabe  <s.wanabe@gmail.com>

	* tool/config.sub: add mingw64.

	* win32/mkexports.rb (Exports::Mingw64): added.

	* win32/mkexports.rb (Exports::Mingw32): renamed from Exports::Mingw.
  
Thu Sep 23 09:01:28 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_insnhelper.c (vm_cref_push): no outer cref is needed for proc
	  from method.  Bug #3786, Bug #3860, [ruby-core:32501]

Wed Sep 22 17:12:01 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/openssl/utils.rb (OpenSSL#silent): always restore $VERBOSE.
	  [ruby-dev:42285]

Wed Sep 22 16:59:40 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/test_prime.rb (TestPrime#test_new): the warning expected have
	  not been displayed when $VERBOSE == nil. Patch by Shota Fukumori
	  a.k.a. sora_h. [ruby-dev:42272]
	  Recovers $stderr even if StringIO.new fails. Reported by unak.

Wed Sep 22 01:55:48 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: fix last commit.

Wed Sep 22 01:49:52 2010  Koichi Sasada  <ko1@atdot.net>

	* bootstraptest/test_method.rb: add a test for [ruby-core:30534].

Wed Sep 22 00:52:44 2010  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/rdoc/ri/store.rb (save_cache): remove duplicate entries.

Wed Sep 22 00:00:05 2010  Tanaka Akira  <akr@fsij.org>

	* ext/pathname/pathname.c (path_f_pathname): Pathname() translated
	  from pathname.rb.

Tue Sep 21 22:18:30 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* tool/mkconfig.rb: fixed build problem on mswin64 introduced in r29278.

Tue Sep 21 02:42:35 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/pathname/test_pathname.rb (TestPathname#test_mkdir): fix typo.

Mon Sep 20 23:23:05 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* dir.c (bracket): get rid of scanning at the end of the pattern